--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -1,3 +1,9 @@
-.App {
-  text-align: center;
+body{
+  background-color: #f9f9f9;
+}
+
+#main-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
